cppfastlogging/cppfastlogging.hpp

struct Error
{
    uint32_t magic;
    char *msg;
    intptr_t code;
};
enum class FileTypeEnum : uint8_t
{
    Message,
    Sync,
    Rotate,
    Stop
};
enum class CompressionMethodEnum : uint8_t
{
    Store,
    Deflate,
    Zstd,
    Lzma
};
enum class WriterTypeEnum : uint8_t
{
    Root,
    Console,
    File,
    Client,
    Server,
    Syslog
};
enum class MessageStructEnum : uint8_t
{
    String,
    Json,
    Xml
};
enum class EncryptionMethod : uint8_t
{
    NONE,
    AuthKey,
    AES
};
    /// Forward-declaration of opaque type to use as pointer to the Rust object.
    struct ExtConfig;
    struct ConsoleWriterConfig;
    struct FileWriterConfig;
    struct ServerConfig;
    struct ClientWriterConfig;
    struct CallbackWriterConfig;
    struct Logging;
    struct Logger;
    rust::ExtConfig *ext_config_new(MessageStructEnum structured,
                                    int8_t hostname,
                                    int8_t pname,
                                    int8_t pid,
                                    int8_t tname,
                                    int8_t tid);
    // Console writer

    rust::ConsoleWriterConfig *console_writer_config_new(uint8_t level, int8_t colors);
    // File writer

    rust::FileWriterConfig *file_writer_config_new(uint8_t level,
                                                   const char *path,
                                                   uint32_t size,
                                                   uint32_t backlog,
                                                   int32_t timeout,
                                                   int64_t time,
                                                   CompressionMethodEnum compression);
    // Client writer

    rust::ClientWriterConfig *client_writer_config_new(uint8_t level,
                                                       const char *address,
                                                       EncryptionMethod encryption,
                                                       const char *key);
    // Server

    rust::ServerConfig *server_config_new(uint8_t level,
                                          const char *address,
                                          EncryptionMethod encryption,
                                          const char *key);
    // Callback writer

    rust::CallbackWriterConfig *callback_writer_config_new(uint8_t level,
                                                           const char *callback);
    /// For further reading ...
    /// #[no_mangle] - // https://internals.rust-lang.org/t/precise-semantics-of-no-mangle/4098
    rust::Logging *logging_new(uint8_t level,
                               const char *domain,
                               rust::ExtConfig *ext_config,
                               rust::ConsoleWriterConfig *console,
                               rust::FileWriterConfig *file,
                               rust::ServerConfig *server,
                               rust::ClientWriterConfig *connect,
                               int8_t syslog,
                               const char *config);
    int logging_shutdown(rust::Logging *logging, uint8_t now);
    int logging_set_level(rust::Logging *logging, uint8_t level);
    void logging_set_domain(rust::Logging *logging, const char *domain);
    void logging_add_logger(rust::Logging *logging, rust::Logger *logger);
    void logging_remove_writer(rust::Logging *logging, WriterTypeEnum writer);
    intptr_t logging_sync_all(const rust::Logging *logging, double timeout);
    // File writer

    intptr_t logging_rotate(const rust::Logging *logging);
    const char *logging_get_config_string(rust::Logging *logging);
    int logging_save_config(rust::Logging *logging, const char *path);
    // Logging calls

    intptr_t logging_trace(const rust::Logging *logging, const char *message);
    intptr_t logging_debug(const rust::Logging *logging, const char *message);
    intptr_t logging_info(const rust::Logging *logging, const char *message);
    intptr_t logging_success(const rust::Logging *logging, const char *message);
    intptr_t logging_warning(const rust::Logging *logging, const char *message);
    intptr_t logging_error(const rust::Logging *logging, const char *message);
    intptr_t logging_critical(const rust::Logging *logging, const char *message);
    intptr_t logging_fatal(const rust::Logging *logging, const char *message);
    intptr_t logging_exception(const rust::Logging *logging, const char *message);
    // Logger

    rust::Logger *logger_new(uint8_t level, const char *domain);
    rust::Logger *logger_new_ext(uint8_t level, const char *domain, int8_t tname, int8_t tid);
    void logger_set_level(rust::Logger *logger, uint8_t level);
    void logger_set_domain(rust::Logger *logger, const char *domain);
    intptr_t logger_trace(const rust::Logger *logger, const char *message);
    intptr_t logger_debug(const rust::Logger *logger, const char *message);
    intptr_t logger_info(const rust::Logger *logger, const char *message);
    intptr_t logger_success(const rust::Logger *logger, const char *message);
    intptr_t logger_warning(const rust::Logger *logger, const char *message);
    intptr_t logger_error(const rust::Logger *logger, const char *message);
    intptr_t logger_critical(const rust::Logger *logger, const char *message);
    intptr_t logger_fatal(const rust::Logger *logger, const char *message);
    intptr_t logger_exception(const rust::Logger *logger, const char *message);